Delete some Chinese comments and make some layout adjustments.

--- a/static/css/login_style.css
+++ b/static/css/login_style.css
@@ -49,7 +49,7 @@ h1 {
 }
 
 .btn {
-    width: 48%; /* Two buttons side-by-side */
+    width: 48%;
     padding: 10px;
     margin: 5px;
     background-color: #007bff;
