--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,5 @@
 {% load static %}
 
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -20,7 +19,6 @@
     <style>
         main {
             padding-top: 120px;
-            /* Adjust the padding to match the height of your fixed header */
         }
         body {
             background: url("{% static 'image\background.jpg' %}") center center fixed;
@@ -32,9 +30,7 @@
             position: fixed;
             width: 100%;
             background-color: #ffffff;
-            /* Add your desired background color */
             z-index: 1000;
-            /* Make sure the header is on top of other elements */
         }
 
         .sorted-bar {
@@ -43,68 +39,66 @@
                 align-items: center;
                 margin-block: 10px 20px;
             } 
-            .btn {
-                background-color: #ca553b;
-  
-                color: white;
-                text-align: center;
-                font-size: 20px;
-                opacity: 0.75;
-                transition: 0.1s;
-                display: inline-block;
-                text-decoration: none;
-                cursor: pointer;
+        .btn {
+            background-color: #ca553b;
 
-                margin: 10px;
-                padding: 10px;
-                border: 1px solid #463d26;
-                box-shadow: 0 0 5px rgb(176, 176, 176);
-            }
-            .btn:hover {opacity: 1}
+            color: white;
+            text-align: center;
+            font-size: 20px;
+            opacity: 0.75;
+            transition: 0.1s;
+            display: inline-block;
+            text-decoration: none;
+            cursor: pointer;
 
-            .job-listing {
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
+            margin: 10px;
+            padding: 10px;
+            border: 1px solid #463d26;
+            box-shadow: 0 0 5px rgb(176, 176, 176);
+        }
+        .btn:hover {opacity: 1}
 
-            }
+        .job-listing {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
 
-            .job-link {
-                text-decoration: none;
-                color: #474747;
-            }
+        .job-link {
+            text-decoration: none;
+            color: #474747;
+        }
 
-            .job-link:hover h3 {
-                text-decoration: underline;
-            }
+        .job-link:hover h3 {
+            text-decoration: underline;
+        }
 
-            .job-detail {
-                display: flex;
-                justify-content: space-between;
-                flex-wrap: wrap;
-                 padding-right: 10px;
-            }
-            .custom-link {
-                border-radius: 10px;
-                transition: background-color 0.3s, font-size 0.3s, transform 0.3s;
-            }
+        .job-detail {
+            display: flex;
+            justify-content: space-between;
+            flex-wrap: wrap;
+             padding-right: 10px;
+        }
+        .custom-link {
+            border-radius: 10px;
+            transition: background-color 0.3s, font-size 0.3s, transform 0.3s;
+        }
 
-            .custom-link:hover {
-                background-color: rgba(144, 238, 144, 0.3);
-                transform: scale(1.02);
-            }
-            .user-link img{
-               transition: transform 0.3s ease, box-shadow 0.3s ease, border-color 0.3s ease;
-               border: 3px solid #098faae1;
-            }
+        .custom-link:hover {
+            background-color: rgba(144, 238, 144, 0.3);
+            transform: scale(1.02);
+        }
+        .user-link img{
+           transition: transform 0.3s ease, box-shadow 0.3s ease, border-color 0.3s ease;
+           border: 3px solid #098faae1;
+        }
 
-            .user-link img:hover {
-                transform: scale(1.15);
-                border-color: #ff8c00;
-                box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-             }
-
+        .user-link img:hover {
+            transform: scale(1.15);
+            border-color: #ff8c00;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+         }
     </style>
 </head>
 
@@ -127,7 +121,6 @@
                                  <img src="{{ user.avatar }}" alt="employer" width="32" height="32" class="rounded-circle">
                             {% else %}
                             {% if user.type == 2 %}
-
                                 <img src="{% static 'image\default-employer.jpg' %}" alt="employer" width="32" height="32" class="rounded-circle">
                             {% else %}
 
@@ -146,12 +139,11 @@
                         </ul>
                     </div>
 
-                    <!--   未登录，显示login和register     -->
+                    <!-- If not logged in, display 'login' and 'register' -->
                     {% else %}
                     <div class="col-md-4 d-flex justify-content-end align-items-center">
                         <a href="{% url 'login' %}" class="btn btn-dark" role="button">Login</a>
                         <a href="{% url 'register' user_type=1 %}" class="btn btn-outline-secondary" role="button">Register</a>
-                        <!-- 注册的url后续需修改 -->
                     </div>
                     {% endif %}
                 </div>
@@ -163,17 +155,16 @@
         <div class="container flex-nowrap justify-content-between align-items-center">
             {% block body_block %}{% endblock%}
         </div>
-
     </main>
 
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
         integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
         crossorigin="anonymous"></script>
-
 </body>
 
 </html>
