--- a/templates/base.html
+++ b/templates/base.html
@@ -23,8 +23,8 @@
             /* Adjust the padding to match the height of your fixed header */
         }
         body {
-            background: url("{% static 'image\background.jpg' %}") center center fixed;
-            background-color: hsla(0, 7%, 94%, 0.685); 
+            background: url("{% static 'image\background2.jpg' %}") center center fixed;
+            background-color: hsla(0, 7%, 94%, 0.9); 
             background-size: cover;
         }
 
@@ -83,7 +83,7 @@
                 display: flex;
                 justify-content: space-between;
                 flex-wrap: wrap;
-                 padding-right: 10px;
+                padding-right: 10px;
             }
             .custom-link {
                 border-radius: 10px;
